samples/_failures_safe/1761458584_ddbc23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a773268.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_8a773268.c:140:9: error: expected ‘:’ or ‘...’ at end of input
  140 |         case STATE_ERROR
      |         ^~~~
./samples/SAFE/__tmp_8a773268.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a773268.c:140:9: error: expected declaration or statement at end of input
